--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
                 <h1 class="animated-title">MENTAL HEALTH GAME</h1>
             </div>
             <div class="logo-container">
-                <img src="./images/IEEE_Logo.png" alt="IEEE Logo" class="ieee-logo">
+                <img src="./images/ieee-logo.png" alt="IEEE Logo" class="ieee-logo">
+
 
             </div>
         </div>
